<resources>
    <string name="app_name">faborfood</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_una_cuenta_incribirse">No tienes una cuenta? Incribirse</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingrese_a_su_cuenta">Ingrese a su cuenta</string>
    <string name="contrasena">Contraseña</string>
    <string name="bienvenido_a_faborfood">Bienvenido a FaborFood</string>
    <string name="correoelectronico">Correo Electronico</string>
    <string name="registrese">Registrese</string>
    <string name="tienes_cuenta_iniciar_sesion">tienes_cuenta?_iniciar sesion</string>
    <string name="title_activity_store_location">StoreLocationActivity</string>
    <string name="registresucuenta">Registre su cuenta</string>
    <string name="apellidos" >apellidos</string>
    <string name="nombres">nombres</string>
    <string name="deliciosamente_tuyo_con_faborfoot">Deliciosamente tuyo, con FaborFoot</string>
    <string name="faborfood">Faborfood</string>
    <string name="logo">logo</string>
</resources>