<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".SignupActivity">


    <TextView
        android:id="@+id/TextBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="#00FFFFFF"
        android:text="@string/bienvenido"
        android:textColor="@color/brown"
        android:textSize="50sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textingCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#00FFFFFF"
        android:text="@string/ingrese_a_su_cuenta"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextBienvenido"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nombres"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/borderbrown"
        android:hint="nombres"
        android:hyphenationFrequency="normal"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textingCuenta"
        tools:ignore="Autofill,HardcodedText" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/borderbrown"
        android:hint="apellidos"
        android:hyphenationFrequency="normal"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombres"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/borderbrown"
        android:hint="@string/correo_electronico"
        android:hyphenationFrequency="normal"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidos"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/borderbrown"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupEmail" />

    <EditText
        android:id="@+id/signupPassword2"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/borderbrown"
        android:hint="@string/confirmar_contrasena"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/ingresar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:background="@drawable/borderbrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword2" />

    <TextView
        android:id="@+id/logintext"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/no_tienes_una_cuenta_incribirse"
        android:textColor="@color/terracotta"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbutton" />


</androidx.constraintlayout.widget.ConstraintLayout>